# Sysmon_Behavioral_Analytic

./: README.md  README_OLD.md  Sysmon_Behavioral_Analytic_Contributions.md  Workshop_Abstract_v1  literature_review.md  pyproject.toml
strata_repo/: README.md  check_attack_window.py  check_fixes.py  check_fixes_v3.py  check_hostnames.py  check_scores.py  pyproject.toml  run_experiments.py
strata_repo/results/: h1_variance_reduction.csv  h2_role_vs_global_recall.csv  h3_pvalue_uniformity.csv  h4_channel_comparison.csv  h5_gating_fpr_recall.csv  results_summary.csv
strata_repo/results_01MAR/h2/: h2_role_vs_global_recall.csv
strata_repo/results_01MAR/h4_final/: h4_channel_comparison.csv
strata_repo/results_01MAR_2130/h5/: h5_gating_fpr_recall.csv
strata_repo/results_01MAR_Post_Fixes/h2/: h2_role_vs_global_recall.csv
strata_repo/results_01MAR_Post_Fixes/h3/: h3_pvalue_uniformity.csv
strata_repo/results_01MAR_v4/h4/: h4_channel_comparison.csv
strata_repo/results_02MAR_v1/h3/: h3_pvalue_uniformity.csv
strata_repo/results_02MAR_v1/h4/: h4_channel_comparison.csv
strata_repo/results_02MAR_v1/h5/: h5_gating_fpr_recall.csv
strata_repo/strata_e.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strata_repo/sysmon_pipeline/: __init__.py  config.py  divergence.py  graph.py  loaders.py  mapping.py  pairs.py  pipeline.py  schema.py  scoring.py  sequence.py  visuals.py
strata_repo/tests/: test_pipeline.py
sysmon_behavioral_mvp_repo/: README.md  pyproject.toml  requirements.txt
sysmon_pipeline_updated/: README.md
sysmon_v12_modular_package_v2/: README.md  pyproject.toml
sysmon_v12_modular_package_v2/notebooks/: 01_run_pipeline.ipynb
sysmon_v12_modular_package_v2/sysmon_pipeline/: ReadMe.md  __init__.py  config.py  dashboard.py  divergence.py  graph.py  mapping.py  models.py  pairs.py  pipeline.py  schema.py  scoring.py  sequence.py  visuals.py
sysmon_v12_modular_package_v2/tests/: test_end_to_end_synthetic.py  test_imports.py
(+36 files in other folders)
