[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon-pipeline"
version = "0.1.0"
description = "Time-aware, peer-baselined Sysmon behavioral analytic"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jack Moody"}]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["sysmon_pipeline_updated"]

[tool.setuptools]
include-package-data = true
