[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-e"
version = "1.0.0"
description = "STRATA-E: Structural and Temporal Role-Aware Threat Analytics for Endpoint Telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jack Moody"}]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "networkx>=3.1",
  "matplotlib>=3.7",
  "plotly>=5.0",
  "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
hmm = ["hmmlearn>=0.3"]

[project.scripts]
strata = "sysmon_pipeline.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sysmon_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
